<resources>
    <string name="app_name">Travel Journal</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search for a check in</string>
    <string name="facebook_app_id">563467610530561</string>
    <string name="nav_profile">Profile</string>
        
    <string name="nav_checkins">Check-ins</string>
        
    <string name="nav_Diary">Diary</string>
        
    <string name="nav_Gallery">Gallery</string>

    <string name="nav_reviews">Reviews</string>
        
    <string name="nav_settings">Settings</string>

    <string-array name="drawer_items">
        <item>Profile</item>
        <item>Check-ins</item>
        <item>Diary</item>
        <item>Gallery</item>
        <item>Reviews</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_main_user_interface">MainUserInterface</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_about">About</string>
    <string name="nav_other">Other</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
